--- a/guithongbao.html
+++ b/guithongbao.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-    <title> Trao đổi đồ cũ - Đồ án môn Quản lý dự án Nhóm 10 </title> <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE8" /> <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /> <meta http-equiv="Content-Language" content="vi-VN" /> <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" /> <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE8" /> 
+    <title> Mua bán rao vặt TP.HCM - Chợ Tốt Thành phố Hồ Chí Minh - Chotot.vn - Trang 3 </title> <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE8" /> <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /> <meta http-equiv="Content-Language" content="vi-VN" /> <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" /> <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE8" /> 
     <link href="css/14934-list-list-html.css" rel="stylesheet" >
 	<link rel="stylesheet" href="css/bootstrap.min.css"  />
     <link rel="stylesheet" href="css/bootstrap-theme.min.css"  />
@@ -150,44 +150,23 @@
                 <a onClick="return xt_click(this, 'C', xtn2, 'Bcrumb::home', 'N')" href="#" class="nohistory" rel="v:url" property="v:title">chotot.vn</a></span> » <span typeof="v:Breadcrumb">  
                 <a onClick="return xt_click(this, 'C', xtn2, 'Bcrumb::region', 'N')" href="#" class="nohistory" rel="v:url" property="v:title">   Tp Hồ Chí Minh   </a>  </span>   </div>
             
-                <h3>QUẢN LÝ USER</h3>
-                <form action="#" method="POST">
-					<div class="input-control text">
-						<input type="text" placeholder="Tìm kiếm user">
-					</div>
-					<button class="button search_button">Search</button> <br/>
-				</form>
-				<div class="input-group">
-					  <span class="input-group-addon">
-						<input type="checkbox" aria-label="...">
-					  </span>
-					  <input type="text" disabled style="width:400px" value="hosinam" class="form-control" aria-label="...">
-					</div><!-- /input-group -->
-					<br />
-					<div class="input-group">
-					  <span class="input-group-addon">
-						<input type="checkbox" aria-label="...">
-					  </span>
-					  <input type="text" disabled value="hosinam669" style="width:400px" class="form-control" aria-label="...">
-					</div><!-- /input-group -->
-					<br />
-					<div class="input-group">
-					  <span class="input-group-addon">
-						<input type="checkbox" aria-label="...">
-					  </span>
-					  <input type="text" disabled value="hosinam2508" style="width:400px" class="form-control" aria-label="...">
-					</div><!-- /input-group -->
-					<br />
-					<div class="input-group">
-					  <span class="input-group-addon">
-						<input type="checkbox" aria-label="...">
-					  </span>
-					  <input type="text" disabled value="hosinam007" style="width:400px" class="form-control" aria-label="...">
-					</div><!-- /input-group -->
-					<br />
-					<button class="button lock_button">Khóa Tài Khoản</button>
-					<button class="button delete_button">Xóa Tài Khoản</button>
-					<button class="button send_button">Hủy Bỏ</button>
+                <h3>THÔNG BÁO</h3>
+                <div style="height:150px" class="input-control textarea thongbao">
+                    <textarea rows="1" cols="50" placeholder="Nội dung"></textarea>
+                </div>
+                <br/>
+                <label class="switch">
+                Gửi nhiều người
+	                <input type="checkbox">
+                    <span class="check"></span>
+                </label>
+                <br />
+                <div class="input-control text">
+                <input type="text" placeholder="Người nhận">
+                </div>
+                <br />
+                <button class="button send_button">Send</button>
+                <button class="button send_button">Cancel</button>
             </div> 
         </div>
     </div>
