--- a/quanlyuser.html
+++ b/quanlyuser.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-    <title> Trao đổi đồ cũ - Đồ án môn Quản lý dự án Nhóm 10 </title> <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE8" /> <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /> <meta http-equiv="Content-Language" content="vi-VN" /> <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" /> <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE8" /> 
+    <title> Mua bán rao vặt TP.HCM - Chợ Tốt Thành phố Hồ Chí Minh - Chotot.vn - Trang 3 </title> <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE8" /> <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /> <meta http-equiv="Content-Language" content="vi-VN" /> <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" /> <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE8" /> 
     <link href="css/14934-list-list-html.css" rel="stylesheet" >
 	<link rel="stylesheet" href="css/bootstrap.min.css"  />
     <link rel="stylesheet" href="css/bootstrap-theme.min.css"  />
