--- a/template-v1.0.html
+++ b/template-v1.0.html
@@ -4,7 +4,12 @@
     <title>Trao đổi đồ cũ</title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/mystyle.css">
-
+    <link href="css/metro.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/mystyle.css"  />
+    <script src="js/bootstrap.min.js"> </script>
+    <script src="js/metro.js"></script>
+    <script src="js/jquery-2.1.4.min.js"></script>
+	
 </head>
 <body>
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
